[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[project]
name = "xnxx_api"
version = "2.1"
description = "A Python API for the Porn Site xnxx.com"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = "LGPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    { name = "Johannes Habel", email = "EchterAlsFake@proton.me" }
]
dependencies = [
    "av>=17.1.0",
    "bs4",
    "eaf_base_api",
    "m3u8",
]
classifiers = [
    "Programming Language :: Python",
]

[project.optional-dependencies]
av = ["av; python_version >= '3.10'"]
full = ["lxml"] # H2 for HTTP 2.0 support, LXML for faster parsing speed, though optional :)

[project.urls]
Homepage = "https://github.com/EchterAlsFake/xnxx_api"

[project.scripts]
xnxx_api = "xnxx_api.xnxx_api:main"

[tool.setuptools]
packages = { find = {} }


[tool.uv.build-backend]
module-name = "xnxx_api"
module-root = ""
